Bug 307890 - Another crash in Cookie settings
Summary: Another crash in Cookie settings
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.80
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-05 12:11 UTC by Christoph Feck
Modified: 2012-10-05 13:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2012-10-05 12:11:55 UTC
Application: konqueror (4.9.80)
KDE Platform Version: 4.9.80 (Compiled from sources)
Qt Version: 4.8.3
Operating System: Linux 3.4.11-7-desktop i686
Distribution: "openSUSE 12.2 (i586)"

-- Information about the crash:
To reproduce:
- open Konqueror Settings > "Cookies"
- choose tab "Management"
- select any domain from list, click "Configure Policy"
- click "Cancel" in that dialog
- go back to tab "Policy"
- change "Default Policy", but do not apply yet
- click "Reset" button

The crash can be reproduced every time.

-- Backtrace:
Application: Konqueror (kdeinit4), signal: Aborted
Using host libthread_db library "/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0xb53f99c0 (LWP 26103))]

Thread 2 (Thread 0xae818b40 (LWP 26603)):
#0  0xb76f3424 in __kernel_vsyscall ()
#1  0xb5d0090b in poll () from /lib/libc.so.6
#2  0xb564423b in g_poll () from /usr/lib/libglib-2.0.so.0
#3  0xb5635af0 in ?? () from /usr/lib/libglib-2.0.so.0
#4  0xb5635c51 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0xb6c0432f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0xb6bd104c in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb6bd1341 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0xb6abca5c in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0xb6baf59d in ?? () from /usr/lib/libQtCore.so.4
#10 0xb6abfe68 in ?? () from /usr/lib/libQtCore.so.4
#11 0xb6a3de32 in start_thread () from /lib/libpthread.so.0
#12 0xb5d0b8ee in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb53f99c0 (LWP 26103)):
[KCrash Handler]
#7  0xb76f3424 in __kernel_vsyscall ()
#8  0xb5c4f31f in raise () from /lib/libc.so.6
#9  0xb5c50c03 in abort () from /lib/libc.so.6
#10 0xb6ab4d5e in qt_message_output(QtMsgType, char const*) () from /usr/lib/libQtCore.so.4
#11 0xb6ab4f59 in ?? () from /usr/lib/libQtCore.so.4
#12 0xb6ab5078 in qFatal(char const*, ...) () from /usr/lib/libQtCore.so.4
#13 0xb6ab50f5 in qt_assert(char const*, char const*, int) () from /usr/lib/libQtCore.so.4
#14 0xae9d0b74 in KCookiesManagement::on_cookiesTreeWidget_currentItemChanged (this=0x9fb76b0, item=0x0) at /local/git/KDE/base/kde-baseapps/konqueror/settings/kio/kcookiesmanagement.cpp:348
#15 0xae9d1144 in KCookiesManagement::qt_static_metacall (_o=0x9fb76b0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfb6e0c4) at /local/build/KDE/base/kde-baseapps/konqueror/settings/kio/kcookiesmanagement.moc:63
#16 0xae9d1260 in KCookiesManagement::qt_metacall (this=0x9fb76b0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfb6e0c4) at /local/build/KDE/base/kde-baseapps/konqueror/settings/kio/kcookiesmanagement.moc:103
#17 0xb6bd91e5 in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#18 0xb6beabdf in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#19 0xb66bee7d in QTreeWidget::currentItemChanged(QTreeWidgetItem*, QTreeWidgetItem*) () from /usr/lib/libQtGui.so.4
#20 0xb66bef37 in ?? () from /usr/lib/libQtGui.so.4
#21 0xb6bea872 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#22 0xb669a77d in QItemSelectionModel::currentChanged(QModelIndex const&, QModelIndex const&) () from /usr/lib/libQtGui.so.4
#23 0xb669ac97 in QItemSelectionModel::clear() () from /usr/lib/libQtGui.so.4
#24 0xb66c06cd in QTreeWidget::clear() () from /usr/lib/libQtGui.so.4
#25 0xae9cf873 in KCookiesManagement::reset (this=0x9fb76b0, deleteAll=false) at /local/git/KDE/base/kde-baseapps/konqueror/settings/kio/kcookiesmanagement.cpp:213
#26 0xae9cf807 in KCookiesManagement::defaults (this=0x9fb76b0) at /local/git/KDE/base/kde-baseapps/konqueror/settings/kio/kcookiesmanagement.cpp:200
#27 0xae9cec4e in KCookiesManagement::load (this=0x9fb76b0) at /local/git/KDE/base/kde-baseapps/konqueror/settings/kio/kcookiesmanagement.cpp:131
#28 0xae9c7dbe in KCookiesMain::load (this=0x9f9eba8) at /local/git/KDE/base/kde-baseapps/konqueror/settings/kio/kcookiesmain.cpp:79
#29 0xb23bdb58 in KCModuleProxy::load (this=0x9f585a0) at /local/git/KDE/libs/kdelibs/kutils/kcmoduleproxy.cpp:269
#30 0xb23b94f4 in KCMultiDialog::slotUser1Clicked (this=0x960e3b0) at /local/git/KDE/libs/kdelibs/kutils/kcmultidialog.cpp:274
#31 0xb23bafce in KCMultiDialog::qt_static_metacall (_o=0x960e3b0, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfb6e43c) at /local/build/KDE/libs/kdelibs/kutils/kcmultidialog.moc:71
#32 0xb6bea872 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#33 0xb73748fd in KDialog::resetClicked (this=0x960e3b0) at /local/build/KDE/libs/kdelibs/kdeui/kdialog.moc:236
#34 0xb73735ce in KDialog::slotButtonClicked (this=0x960e3b0, button=512) at /local/git/KDE/libs/kdelibs/kdeui/dialogs/kdialog.cpp:927
#35 0xb73746bf in KDialog::qt_static_metacall (_o=0x960e3b0, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0xbfb6e5e8) at /local/build/KDE/libs/kdelibs/kdeui/kdialog.moc:167
#36 0xb6bea872 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#37 0xb6befa55 in QSignalMapper::mapped(int) () from /usr/lib/libQtCore.so.4
#38 0xb6befc9d in QSignalMapper::map(QObject*) () from /usr/lib/libQtCore.so.4
#39 0xb6befdae in QSignalMapper::map() () from /usr/lib/libQtCore.so.4
#40 0xb6bf0204 in ?? () from /usr/lib/libQtCore.so.4
#41 0xb6bea872 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#42 0xb67bce6d in QAbstractButton::clicked(bool) () from /usr/lib/libQtGui.so.4
#43 0xb64c14ed in ?? () from /usr/lib/libQtGui.so.4
#44 0xb64c1d3b in ?? () from /usr/lib/libQtGui.so.4
#45 0xb64c1ff6 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#46 0xb60fc172 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#47 0xb64c13b2 in QAbstractButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#48 0xb6562d58 in QPushButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#49 0xb60a2adc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#50 0xb60a7fc9 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#51 0xb7429d66 in KApplication::notify (this=0xbfb6f6c0, receiver=0x9cc8570, event=0xbfb6ee94) at /local/git/KDE/libs/kdelibs/kdeui/kernel/kapplication.cpp:311
#52 0xb6bd257e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#53 0xb60a393f in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#54 0xb612c045 in ?? () from /usr/lib/libQtGui.so.4
#55 0xb612ab09 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#56 0xb6154754 in ?? () from /usr/lib/libQtGui.so.4
#57 0xb56357d3 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#58 0xb5635b70 in ?? () from /usr/lib/libglib-2.0.so.0
#59 0xb5635c51 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#60 0xb6c04311 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#61 0xb615433a in ?? () from /usr/lib/libQtGui.so.4
#62 0xb6bd104c in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#63 0xb6bd1341 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#64 0xb6bd65fa in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#65 0xb60a0954 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#66 0xb1a4e86a in kdemain (argc=2, argv=0x95a6ad0) at /local/git/KDE/base/kde-baseapps/konqueror/src/konqmain.cpp:227
#67 0x0804debc in launch (argc=2, _name=0x95db7f4 "/local/kde4/bin/konqueror", args=0x95db817 "", cwd=0x0, envc=0, envs=0x95db81b "", reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x95db81f "duo;1349438655;810022;18599_TIME80119030") at /local/git/KDE/libs/kdelibs/kinit/kinit.cpp:734
#68 0x0804ef23 in handle_launcher_request (sock=8, who=0x80539d4 "launcher") at /local/git/KDE/libs/kdelibs/kinit/kinit.cpp:1226
#69 0x0804f69d in handle_requests (waitForPid=0) at /local/git/KDE/libs/kdelibs/kinit/kinit.cpp:1419
#70 0x08051063 in main (argc=4, argv=0xbfb6fed4, envp=0xbfb6fee8) at /local/git/KDE/libs/kdelibs/kinit/kinit.cpp:1907

Reported using DrKonqi
Comment 1 Dawit Alemayehu 2012-10-05 13:09:08 UTC
Git commit a6d9370e01cb5f6a9fc34f757198a1f1f62a6342 by Dawit Alemayehu.
Committed on 05/10/2012 at 15:06.
Pushed by adawit into branch 'master'.

Removed Q_ASSERT because apparently item can be null.
FIXED-IN: 4.10

M  +18   -21   konqueror/settings/kio/kcookiesmanagement.cpp

http://commits.kde.org/kde-baseapps/a6d9370e01cb5f6a9fc34f757198a1f1f62a6342