Removed Q_ASSERT because apparently item can be null.

BUG: 307890
FIXED-IN: 4.10